--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       data-origin-y="0.0">
       <div class="icons layer" data-depth="0.6">
         <div class="ico"><a href="https://www.facebook.com/Ragh1995"><i class="fa fa-facebook fa-2x fb"></i></a></div>
-        <div class="ico"><a href="https://www.linkedin.com/in/raghsingh95"><i class="fa fa-linkedin fa-2x lin"></i></a></div>
+        <div class="ico"><a href="https://www.linkedin.com/in/ragh1995"><i class="fa fa-linkedin fa-2x lin"></i></a></div>
         <div class="ico"><a href="https://github.com/Ragh2018"><i class="fa fa-github fa-2x git"></i></a></div>
         <div class="ico"><a href="https://www.twitter.com/Ragh95"><i class="fa fa-twitter fa-2x twit"></i></a></div>
         <div class="ico"><a href="mailto:ragh1995@hotmail.com"><i class="fa fa-envelope fa-2x mail"></i></a></div>
