updating the resume

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="ico"><a href="mailto:ragh1995@hotmail.com"><i class="fa fa-envelope fa-2x mail"></i></a></div>
       </div>
       <div class="resume">
-          <div class="ico-res"><a href="https://drive.google.com/open?id=12YrTfTNkpz-Rbm3HvEhiMXQdc2Thu3AW"><i class="fa fa-file-text fa-3x res"></i></a></div>
+          <div class="ico-res"><a href="https://drive.google.com/file/d/1WhEjtTfncs0atimL-812f0dKT2zsViO4/view?usp=sharing"><i class="fa fa-file-text fa-3x res"></i></a></div>
       </div>
     </ul>
     </div>
